uploaded responsive page

--- a/index.html
+++ b/index.html
@@ -1,9 +1,57 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en-us">
+
 <head>
-	<title>Grady Knight</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>About | Grady Knight</title>
+  <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
+
 <body>
-<h1>Quick test to see if this works</h1>
+
+  <header id="masthead">
+    <div class="container">
+      <a href="index.html" id="logo">Grady Knight</a>
+      <nav>
+        <a href="index.html">About</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="contact.html">Contact</a>
+      </nav>
+    </div>
+  </header>
+
+  <div id="main-container" class="container">
+    <section class="main-section">
+      <h1>About Me</h1>
+
+      <img src="assets/images/gbk.png" class="auth-image" alt="Your Name">
+
+      <p>I have a background as a management consultant with Celerant Consulting.  During my time there, 4+ years, I was on-site at Bayer Biologics (Berkeley, CA), Wyeth Pharmaceuticals (Pearl River, NY and Sanford, NC), Roche Pharmaceuticals (Nutley, NJ), and Diosynth Biotechnology (Morrisville, NC). During these engagements I participated in and led projects to minimize lead time for Quality processes, improve capacity utilization in manufacturing, and optimize QC processes. The primary focus of these activities was to apply lean six sigma solutions to non-manufacturing environments. This effort centered on creating balanced score cards throughout the organization. Additionally, we identified and standardized core business processes.</p>
+
+      <p>Following consulting, I was employed at Diosynth Biotechnology. During this time I transitioned between executing continuous improvement projects, installing management systems, and managing relationships with our customers. I managed the process transfer of test methods for three investigational molecules. This process included close cooperation with multiple internal teams as well as the sponsoring company as the investigational molecule progressed through development phases. I led the team which created management processes and tools to manage the release of batches. The net effect of this system was to reduce average lead time from fermentation to API release by approx 60%. This effort was largely driven by standardization of release processes and requirements. The team which I managed was responsible for the design and installation of TrackWise at Diosynth.</p>
+						
+      <p>At Novo Nordisk I began my career as a Lean Coach for Quality. While in this role I led the effort to establish a system for managing the deviation and batch release processes. Additionally, I designed and installed the daily and monthly reporting processes for Quality. The end result of these systems has been our site becoming the most reliable performer within Novo Nordisk with respect to release times.</p>
+
+    </section>
+
+    <section class="sidebar">
+      <div id="connect">
+        <h2>Connect with Me</h2>
+
+        <a href="https://github.com/gradybknight"><img src="assets/images/github-128.png" class="social" alt="GitHub" /></a>
+        <a href="https://www.linkedin.com/in/gradyknight/"><img src="assets/images/linkedin-128.png" class="social" alt="LinkedIn" /></a>
+        <a href="https://stackexchange.com/users/12042322/grady-knight"><img src="assets/images/stackoverflow-128.png" class="social" alt="Stack Overflow" /></a>
+      </div>
+    </section>
+  </div>
+
+  <footer>
+    <div class="container">
+      Copyright &copy; 2018 Grady Knight
+    </div>
+  </footer>
 </body>
+
 </html>
