added RPG to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -33,6 +33,7 @@
       </div>
       <div class="work">
         <img src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game">
+        <a href="https://github.com/gradybknight/week-4-game/blob/master/index.html"></a>
 
         <h3>RPG Game</h3>
       </div>
